--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta name="author" content="Jérémy Aboudan">
+    <meta name="desciption" content="Portfolio de Jérémy Aboudan créé pour le devoir du Centre Européen de Formation : Créer un portfolio avec Vue.js">
+    <title>Portfolio de Jérémy Aboudan</title>
   </head>
   <body>
     <div id="app"></div>
